# scikit-build-cli

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/scikit_build_cli/: __init__.py  __main__.py  main.py  utils.py
src/scikit_build_cli/_compat/importlib/: metadata.py
src/scikit_build_cli/commands/: build.py  configure.py  dynamic_metadata.py  init.py  install.py  metadata.py  new.py
tests/: test_package.py
